--- a/cart.html
+++ b/cart.html
@@ -19,7 +19,7 @@
     <h2>Your Cart</h2>
     <div id="cart-contents"></div>
     <div id="cart-summary" class="card hidden">
-      <p><strong>Subtotal:</strong> $<span id="cart-subtotal">0.00</span></p>
+      <p><strong>Subtotal:</strong> R<span id="cart-subtotal">0.00</span></p>
       <a class="btn" id="go-checkout" href="checkout.html">Proceed to Checkout</a>
     </div>
     <div id="empty-msg" class="card">
