--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <script>
         //const params = new URLSearchParams(window.location.search);
         //const key = params.get('key');
-        let customerDetails = {
-          "customerEmail" : "ayanda@brand.com",
-          "customerId": "customer1"
+        const customerDetails = {
+          customerEmail : "ayanda@brand.com",
+          customerId: "customer1"
         };
         window.dataLayer.push(customerDetails);
         
