--- a/thankyou.html
+++ b/thankyou.html
@@ -30,7 +30,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <section class="card">
       <h2>Thank you!</h2>
       <p id="thanks-msg">Your order has been received.</p>
-      <p>Order details were sent to your email (demo only).</p>
+      <p>Order details were sent to your email.</p>
       <a class="btn" href="products.html">Continue Shopping</a>
     </section>
   </main>
